// Vitest Snapshot v1

exports[`Upload > Upload baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button>
        单文件上传
      </t-radio-button>
      <t-radio-button
        value="true"
      >
        多文件上传
      </t-radio-button>
    </t-radio-group>
  </t-space>
  <t-space>
    <t-checkbox>
      禁用状态
    </t-checkbox>
    <!---->
    <!---->
    <t-checkbox>
      自动上传
    </t-checkbox>
    <!---->
  </t-space>
  <br />
  <t-space>
    <t-upload
      action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      allow-upload-duplicate-file="true"
      auto-upload="true"
      max="5"
      placeholder="要求文件大小在 1M 以内"
      size-limit="[object Object]"
    />
    <t-upload
      action="//service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      auto-upload="true"
      placeholder="这是一段没有文件时的占位文本"
      style="margin-left: 40px;"
      trigger-button-props="[object Object]"
    />
    <t-upload
      action="//service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      auto-upload="true"
      format-response="function () { [native code] }"
      placeholder="文件上传失败示例"
      style="margin-left: 60px;"
    />
  </t-space>
</t-space>
`;

exports[`Upload > Upload customDragVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload t-upload"
>
  <t-button
    variant="outline"
  >
    <svg
      class="t-icon t-icon-cloud-upload"
      fill="none"
      height="1em"
      slot="icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M6.14 10.72L7.5 9.39l.03 5.12 1.01-.01-.03-5.1 1.37 1.34.72-.7-2.26-2.2a.5.5 0 00-.7 0l-2.22 2.18.72.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    点击上传 
  </t-button>
  <br />
  <br />
  <t-upload
    action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
    draggable=""
    theme="custom"
  />
</div>
`;

exports[`Upload > Upload draggableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div>
      是否自动上传：
      <t-switch />
    </div>
    <div>
      <t-radio-group
        variant="default-filled"
      >
        <t-radio-button
          value="file"
        >
          文件拖拽上传
        </t-radio-button>
        <t-radio-button
          value="image"
        >
          图片拖拽上传
        </t-radio-button>
      </t-radio-group>
    </div>
  </div>
  <t-space>
    <t-upload
      abridgename="10,8"
      action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      autoupload="true"
      data="[object Object]"
      draggable=""
      formatresponse="function () { [native code] }"
      theme="file"
    />
    <t-upload
      abridgename="10,8"
      action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      autoupload="true"
      data="[object Object]"
      draggable=""
      formatresponse="function () { [native code] }"
      theme="file"
    />
  </t-space>
</div>
`;

exports[`Upload > Upload fileFlowListVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-checkbox>
      禁用状态
    </t-checkbox>
    <t-checkbox>
      自动上传
    </t-checkbox>
    <t-checkbox>
       允许上传同名文件 
    </t-checkbox>
    <t-checkbox>
       整体替换上传 
    </t-checkbox>
    <t-checkbox>
       多个文件一个请求上传 
    </t-checkbox>
  </t-space>
  <br />
  <t-upload
    action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
    max="10"
    multiple=""
    placeholder="支持批量上传文件，文件格式不限，最多只能上传 10 份文件"
    theme="file-flow"
  />
</t-space>
`;

exports[`Upload > Upload imageVue demo works fine 1`] = `
<t-space
  data-v-26399fbc=""
  direction="vertical"
>
  <t-space
    data-v-26399fbc=""
  >
    <t-checkbox
      data-v-26399fbc=""
    >
       禁用状态 
    </t-checkbox>
    <t-checkbox
      data-v-26399fbc=""
    >
       多个文件一个请求上传 
    </t-checkbox>
    <t-checkbox
      data-v-26399fbc=""
    >
       自动上传 
    </t-checkbox>
    <!---->
  </t-space>
  <br
    data-v-26399fbc=""
  />
  <t-space
    data-v-26399fbc=""
  >
    <t-upload
      accept="image/*"
      action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      autoupload="true"
      data-v-26399fbc=""
      theme="image"
      tips="请选择单张图片文件上传（上传成功状态演示）"
    />
    <t-upload
      accept="image/*"
      action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      autoupload="true"
      data-v-26399fbc=""
      formatresponse="function () { [native code] }"
      theme="image"
      tips="请选择单张图片文件上传（上传失败状态演示）"
    />
  </t-space>
  <t-upload
    accept="image/*"
    action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
    autoupload="true"
    data-v-26399fbc=""
    formatresponse="function () { [native code] }"
    theme="image"
    tips="请选择单张图片文件上传（自定义预览图片地址）"
  />
  <t-upload
    accept="image/*"
    action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
    autoupload="true"
    data-v-26399fbc=""
    max="3"
    multiple=""
    theme="image"
    tips="允许选择多张图片文件上传，最多只能上传 3 张图片"
  />
</t-space>
`;

exports[`Upload > Upload imgFlowListVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <div>
     是否自动上传： 
    <t-switch />
  </div>
  <br />
  <t-upload
    accept="image/*"
    action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
    max="8"
    multiple=""
    placeholder="支持批量上传图片文件"
    theme="image-flow"
  />
</t-space>
`;

exports[`Upload > Upload requestMethodVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button
        value="requestSuccessMethod"
      >
        上传成功示例
      </t-radio-button>
      <t-radio-button
        value="requestFailMethod"
      >
        上传失败示例
      </t-radio-button>
    </t-radio-group>
  </div>
  <t-upload
    requestmethod="function () { [native code] }"
    tips="自定义上传方法需要返回成功或失败信息"
  />
</div>
`;

exports[`Upload > Upload singleCustomVue demo works fine 1`] = `
<div
  data-v-b4e7cf12=""
>
  <t-upload
    action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
    beforeupload="function () { [native code] }"
    data-v-b4e7cf12=""
    multiple=""
    theme="custom"
    tips="上传文件大小在 5M 以内"
  >
    <t-button
      data-v-b4e7cf12=""
      theme="primary"
    >
      自定义上传
    </t-button>
  </t-upload>
  <!---->
</div>
`;

exports[`Upload > Upload singleInputVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload"
>
  <div
    style="width: 350px;"
  >
    <t-upload
      action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      placeholder="未选择文件"
      theme="file-input"
      tips="上传文件大小在 5M 以内"
    />
  </div>
</div>
`;

exports[`Upload > Upload tableVue demo works fine 1`] = `
<section
  class="tdesign-demo-upload-multiple"
  style="width: 570px;"
>
  <header
    class="tdesign-demo-upload-multiple-header"
  >
    <t-upload
      accept="image/*"
      action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
      before-upload="function () { [native code] }"
      data="[object Object]"
      files=""
      multiple="true"
    >
      <t-button
        slot="trigger"
        variant="outline"
      >
        <svg
          class="t-icon t-icon-upload"
          fill="none"
          height="1em"
          slot="icon"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        选择文件
      </t-button>
    </t-upload>
  </header>
  <div
    class="tdesign-demo-upload-table"
  >
    <div
      class="tdesign-demo-upload-table-header"
    >
      <div
        class="tdesign-demo-upload-table__name"
      >
        文件名
      </div>
      <div
        class="tdesign-demo-upload-table__size"
      >
        大小
      </div>
      <div
        class="tdesign-demo-upload-table__status"
      >
        状态
      </div>
      <div
        class="tdesign-demo-upload-table__operator"
      >
        操作
      </div>
    </div>
    <div
      class="tdesign-demo-upload-table--empty"
    >
      <p>
        点击上方“选择文件”或将文件拖拽到此区域
      </p>
    </div>
  </div>
  <div
    class="tdesign-demo-upload-bottom"
  >
    <button
      class="t-button t-button--line"
    >
      取消
    </button>
    <button
      class="t-button t-button--primary"
    >
      开始上传
    </button>
  </div>
</section>
`;
